@@ -1,6 +1,7 @@
 0.3.0
   BugFix in anchor output when pkg list is empty.
   BugFix: TransactionDialog was size constrained.
+  Now the size of TransactionDialog is saved between calls.
 
 0.2.0
   BugFix: anchor navigation fixes.
